# aod

./: CMakeLists.txt  cod.cpp  core  package.xml  rod_analysis.cpp  rod_camera_ir_image_proc.cpp  rod_camera_ir_stfp.cpp  rod_camera_rgb_color_calib.cpp  rod_camera_rgb_stfp.cpp  sorter.perspective
cfg/: analysis.cfg  cod.cfg  color_calib.cfg  image_aggregation.cfg
include/: ColorCalibrationDll.hpp  ColorCalibrationDll_include.h  NodeClass.cpp  NodeClass.h
launch/: IR.launch  RGB.launch  RGBL.launch  SIMULATION.launch  all.launch  analysis.launch  aod.launch  camera.launch  real_camera.launch  sequence.launch  simulated_camera.launch  test.launch
lib/: NodeClass.cpp
src/: cod.cpp  main.cpp  rod_analysis.cpp  rod_camera_image_aggregation.cpp  rod_camera_ir_image_proc.cpp  rod_camera_ir_stfp.cpp  rod_camera_rgb_color_calib.cpp  rod_camera_rgb_stfp.cpp  sync.cpp
src/ROD/: Analysis.hpp  Parameters.h  Properties.h  ResultOD.h  RodFunctions.hpp  UserParameters.h  rod_DetectROI.cpp  rod_DetectROI2.cpp  rod_EdgeDetection.cpp  rod_Ellipse.cpp  rod_KonturIR.cpp  rod_KonturRGB.cpp  rod_MaskaObrazu.cpp  rod_OgonekIR.cpp  rod_SzypulkaMono.cpp
src/SFS/: ATDA.hpp  ATDAException.hpp  Analizer.hpp  Calibrator.hpp  Classifier.hpp  Image.hpp  Resolver.hpp  StatsResolver.hpp  Trainer.hpp  VisionProc.hpp  klasy.xml  mlp.xml  parametry.xml
src/STEM/: CMakeLists.txt  stem_descriptors.h  stem_detector.cpp  stem_detector.hpp  stem_detector_main.cpp  tic_toc.cpp  tic_toc.hpp
src/color_calibration/: ColorCalibrationDll.cpp
